<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference" >
        <Preference
            android:key="id_setting_language"
            android:title="@string/language"/>

        <Preference
            android:key="id_setting_avatar"
            android:title="@string/avatar"/>

        <SwitchPreference
            android:key="id_setting_auto_refresh"
            android:title="@string/auto_refresh"
            android:summary="@string/auto_refresh_summary"
            android:background="@color/colorPrimary"/>

        <SwitchPreference
            android:key="id_setting_confirm_exit"
            android:title="@string/exit_confirm"
            android:summary="@string/exit_confirm_summary"
            app:theme="@style/BlueTheme"/>

        <SwitchPreference
            android:key="id_setting_light_mode"
            android:title="@string/light_mode"
            android:background="@color/colorPrimary"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/storage">
        <Preference
            android:key="id_setting_clear_cache"
            android:title="@string/clear_cache"
            android:summary="@string/clear_cache_summary"/>
        </PreferenceCategory>
</PreferenceScreen>