<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@mipmap/ic_home_black"
            android:title="@string/home" />
        <item
            android:id="@+id/leisure"
            android:icon="@mipmap/ic_leisure_black"
            android:title="@string/leisure" />
        <item
            android:id="@+id/life"
            android:icon="@mipmap/ic_life_black"
            android:title="@string/life" />
        <item
            android:id="@+id/library"
            android:icon="@mipmap/ic_library_black"
            android:title="@string/library" />
        <item
            android:id="@+id/education"
            android:icon="@mipmap/ic_edu_black"
            android:title="@string/education" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/theme"
                android:icon="@mipmap/ic_theme_black"
                android:title="@string/theme" />
            <item
                android:id="@+id/setting"
                android:icon="@mipmap/ic_settings_black"
                android:title="@string/settings" />
            <item
                android:id="@+id/about"
                android:icon="@mipmap/ic_about_black"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
